--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -229,18 +229,19 @@
     "from data scarcity. In addition, we introduce a new data set\n",
     "Faces-HQ, which we used to complement the CelebA data\n",
     "set and FaceForensics++ data set [25], for our experimental\n",
-    "evaluation.Overall, our contributions are summarized as follows:\n",
-    "\u000f We introduce a novel classification pipeline for artificial\n",
+    "evaluation.   \n",
+    "Overall, our contributions are summarized as follows:   \n",
+    "- We introduce a novel classification pipeline for artificial\n",
     "face detection based on a frequency domain analysis.\n",
-    "\u000f We provide a public data set (Faces-HQ) of high quality\n",
+    "- We provide a public data set (Faces-HQ) of high quality\n",
     "images containing real and fake faces from a set of\n",
     "different public databases.\n",
-    "\u000f We demonstrate how we successfully learn to detect\n",
+    "- We demonstrate how we successfully learn to detect\n",
     "forgery: extensive experiments on high and mediumresolution\n",
     "images of the Faces-HQ and CelebA data sets\n",
     "showed 100% accuracy. Additionally, the evaluation of\n",
     "the FaceForensics++ data set with low-resolution videos\n",
-    "reached 91% accuracy."
+    "reached 91% accuracy\n"
    ]
   },
   {
