--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -297,10 +297,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "In 2014, Goodfellow et al. introduced an adversarial framework\n",
     "(GAN) which marked a milestone in generative models.\n",
@@ -313,6 +311,360 @@
     "drawing an ever increasing attention trying to detect GAN\n",
     "generated images or videos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lack of eye blinking [18] is one drawback observed,\n",
+    "when the videos are artificially created. This is due to the\n",
+    "scarcity of training images including photographs with the\n",
+    "subject’s eyes closed. Nevertheless, this detection can be\n",
+    "circumvented by adding images with closed eyes in training.\n",
+    "Finding unnatural head poses, is also an extend technique [26],\n",
+    "in order to detect tampered digital contents. On the other hand,\n",
+    "the works [17], [22] analyze the color-space features from\n",
+    "GAN generated images and real images, and use the disparity\n",
+    "to classify them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other approaches [2], [21], [27], rather than leveraging\n",
+    "explicit lacks or failures, rely on CNNs to distinguish GAN’s\n",
+    "output from real images. In the same vein, [13] introduces\n",
+    "deep forgery discriminator with a contrastive loss function\n",
+    "and [12] incorporates temporal domain information by\n",
+    "employing Recurrent Neural Networks (RNNs) upon CNNs.\n",
+    "While deep learning methods show promising performance,\n",
+    "a key concern is that all these methods can be easily learnt\n",
+    "by the GAN. In particular, by incorporating them in to the\n",
+    "GAN’s discriminator, the generator can be fine-tuned to learn\n",
+    "a countermeasure for any differentiable forensic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### III. METHOD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following section, we describe our approach in\n",
+    "detail. Figure 2) gives an overview of the processing steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Fig. 2: Overview of the processing pipeline of our approach. It contains two main blocks, a feature extraction block using\n",
+    "DFT and a training block, where a classifier uses the new transformed features to determine whether the face is real or not.\n",
+    "Notice that input images are transformed to grey-scale before DFT.](imgs/pipeline.png)   \n",
+    "**Fig. 2**: Overview of the processing pipeline of our approach. It contains two main blocks, a feature extraction block using\n",
+    "DFT and a training block, where a classifier uses the new transformed features to determine whether the face is real or not.\n",
+    "Notice that input images are transformed to grey-scale before DFT.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A. Frequency Domain Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Frequency domain analysis is of utmost importance in\n",
+    "signal processing theory and applications. In particular in the\n",
+    "computer vision domain, the repetitive nature or the frequency characteristics of images can be analyzed on a space defined\n",
+    "by Fourier transform. Such transformation consists in a\n",
+    "spectral decomposition of the input data indicating how the\n",
+    "signal’s energy is distributed over a range of frequencies.\n",
+    "Methods based on frequency domain analysis have shown\n",
+    "wide applications in image processing, such as image analysis,\n",
+    "image filtering, image reconstruction and image compression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Fig. 3: Example of a DFT applied to a sample. (Left) Input\n",
+    "image 1. (Center) Power Spectrum. (Right) Phase Spectrum.](imgs/fig3.png)   \n",
+    "**Fig. 3**: Example of a DFT applied to a sample. (Left) Input\n",
+    "image 1. (Center) Power Spectrum. (Right) Phase Spectrum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) Discrete Fourier Transform:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Discrete Fourier Transform\n",
+    "(DFT) is a mathematical technique to decompose a discrete\n",
+    "signal into sinusoidal components of various frequencies\n",
+    "ranging from 0 (i.e., constant frequency, corresponding to the\n",
+    "image mean value) up to the maximum representable frequency,\n",
+    "given the spatial resolution. It is the discrete analogon\n",
+    "of the continuous Fourier Transform for signals sampled on\n",
+    "equidistant points. For 2-dimensional data of size M \u0002 N, it\n",
+    "can be computed as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(1)**   \n",
+    "\\begin{equation*}\n",
+    " X_{k,l} = \\sum_{n=0}^{N-1} \\sum_{0}^{M-1} x_{n,m}  e^{-\\frac {i 2 \\pi} {N} k n} e^{-\\frac {i 2 \\pi} {M} l m}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The frequency-domain representation of a signal (Xk)\n",
+    "carries information about the signal’s amplitude and phase at\n",
+    "each frequency. Fig. 3 depicts the complex output information\n",
+    "(power and phase). Notice that the amplitude spectrum is the\n",
+    "square root power spectrum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Fig. 4: Example of an azimuthal average. (Left) Power\n",
+    "Spectrum 2D. (Right) Power Spectrum 1D. Each frequency\n",
+    "component is the radial average from the 2D spectrum.](imgs/fig4.png)     \n",
+    "**Fig. 4**: Example of an azimuthal average. (Left) Power\n",
+    "Spectrum 2D. (Right) Power Spectrum 1D. Each frequency\n",
+    "component is the radial average from the 2D spectrum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2) Azimuthal Average:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After applying a Fourier Transform\n",
+    "to a sample image, the information is represented in a new\n",
+    "domain but within the same dimensionality. Therefore, given\n",
+    "that we work with images, the output still contains 2D\n",
+    "information. We apply azimuthal averaging to compute a\n",
+    "robust 1D representation of the FFT power spectrum. It can\n",
+    "be seen as a compression, gathering and averaging similar\n",
+    "frequency components into a vector of features. In this way,\n",
+    "we can reduce the amount of features without losing relevant\n",
+    "information. Furthermore, throughout this compression, we\n",
+    "achieve a more robust representation of the input. Fig. 4\n",
+    "shows a visual example of such method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B. Classifier Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Classification is the task to learn a general mapping from\n",
+    "the attribute space to descrete classes, using specific examples of instances, each represented by a vector of attribute values\n",
+    "and their acording lable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) Logistic Regression:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the technically simplest\n",
+    "(linear) classification algorithms is the Logistic Regression\n",
+    "(LR). It is a simple statistical model that employs a logistic\n",
+    "function (see Formula (4)) to model a binary dependent\n",
+    "variable. The output from the hypothesis h is the estimated\n",
+    "probability. This is used to infer how confident predicted value\n",
+    "can be given an input x. Logistic regression is formulated as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(2)**\n",
+    "\\begin{equation*}\n",
+    "h_w(x)=\\frac{1}{1+e^{-w^Tx}}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The underlying algorithm of maximum likelihood\n",
+    "estimation determines the regression coefficient w for the\n",
+    "model that accurately predicts and fits the probability of the\n",
+    "binary dependent variable. The algorithm stops when the\n",
+    "convergence criterion is met or the maximum number of\n",
+    "iterations is reached."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### 2) Support Vector Machines:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Support Vector Machines\n",
+    "(SVMs) [3], [6] are among the most widely used learning\n",
+    "algorithms for (non-linear) data classification. The target of the\n",
+    "SVM formulation is to produce a model (based on the training\n",
+    "data) which will identify an optimal separating hyperplane,\n",
+    "maximizing the margin between different classes. Given a\n",
+    "training set of instance-label pairs (x<sub>i</sub>, y<sub>i</sub>), i = 1,...l where\n",
+    "x<sub>i</sub> ε R<sup>n</sup> and y ε {1, -1}<sup>l</sup>, Training of SVMs is implemented\n",
+    "by the solution of the following optimization problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(3)** \n",
+    "\\begin{equation*}\n",
+    "min_{x,b,ξ}  \\frac{1}{2} ||w||^2 + C \\sum_{i=1}^l ξ_i \n",
+    "\\end{equation*}   \n",
+    "s.t. \\begin{equation*}\n",
+    "y_i(w^T Φ(x_i) + b) \\geq 1 - ξ_i\n",
+    "\\end{equation*}   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where w and b are the parameters of our classifier, \u0018 is the\n",
+    "slack variable and C > 0 the penalty parameter of the error\n",
+    "term."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here training vectors xi are mapped into a higher\n",
+    "dimensional space by the function Φ. The training objective\n",
+    "of SVMs is to find a linear separating hyperplane with the maximal margin in this higher dimensional space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3) K-Means Clustering:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While supervised classification\n",
+    "algorithms like SVM and LR rely on labeled training example\n",
+    "to learn a classification, we also want to test the detection\n",
+    "performance in the absence of any labeled data. Clustering\n",
+    "is an unsupervised machine learning technique which finds\n",
+    "similarities in the data points and group similar data points\n",
+    "together. The key assumption is that nearby points in the\n",
+    "feature space exhibit similar qualities and they can be clustered\n",
+    "together. Clustering can be done using different techniques like\n",
+    "K-means clustering."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K-means objective function is defined as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(4)**   \n",
+    "\\begin{equation*}\n",
+    "J = \\sum_{k=1}^K \\sum_{i=1}^m ||x_i-μ_k||^2\n",
+    "\\end{equation*}   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where K and m are the number of clusters and samples\n",
+    "respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A common approach to heuristically approximate solutions is\n",
+    "to iteratively identify nearby features based on the distances\n",
+    "calculated from initial centroids \u0016. Then, these features are\n",
+    "assigned to the closest cluster and the centroids are reestimated.\n",
+    "Since the amount of clusters is determined by the\n",
+    "user, it can be easily employed in classification where we\n",
+    "divide data into K clusters with K equal to or greater than\n",
+    "the number of classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
