Discussion and Conclusion

--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -6482,6 +6482,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V. DISCUSSION AND CONCLUSION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this paper, we described and evaluated the efficacy of a\n",
+    "new method to expose AI-generated fake faces images. Our\n",
+    "approach is based on a high-frequency component analysis.\n",
+    "We performed extensive experiments to demonstrate the robustness\n",
+    "of our pipeline independently of the source image.\n",
+    "We show that our method is able to detect high- and mediumresolution\n",
+    "deepfake images on two data sets with data from\n",
+    "various GANs with 100% accuracy. Low-resolution content\n",
+    "is harder to identify since the available frequency spectrum\n",
+    "is much smaller. Nevertheless, we are able to identify lowresolution\n",
+    "fakes in a popular benchmark with 91% accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
