--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -8,10 +8,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Ricard Durall <sup>1</sup><sup>2</sup><sup>3</sup> Margret Keuper <sup>4 </sup> Franz-Josef Pfreundt  <sup>1</sup> Janis Keuper <sup>1</sup> <sup>5</sup>   \n",
     "\n",
@@ -211,10 +209,10 @@
     "given training set. Hence, one can sample from the learned\n",
     "distribution and add variations. Two of the most commonly\n",
     "used and efficient approaches are Variational Autoencoders\n",
-    "(VAE) [16] and Generative Adversarial Networks (GAN) [11].\n",
+    "(VAE) [[16]](#[16]) and Generative Adversarial Networks (GAN) [[11]](#[11]).\n",
     "Especially GAN approaches have lately been pushing the\n",
     "limits of state-of-the-art results, improving the resolution and\n",
-    "quality of images produced [4], [14], [15]. As a result, deep\n",
+    "quality of images produced [[4]](#[4]), [[14]](#[14]), [[15]](#[15]). As a result, deep\n",
     "generative models are opening the door to a new vein of AIbased\n",
     "fake image generation leading to a fast dissemination\n",
     "of high quality tampered image content. While significant\n",
@@ -242,7 +240,7 @@
     "is a very convenient property for those scenarios that suffer\n",
     "from data scarcity. In addition, we introduce a new data set\n",
     "Faces-HQ, which we used to complement the CelebA data\n",
-    "set and FaceForensics++ data set [25], for our experimental\n",
+    "set and FaceForensics++ data set [[25]](#[25]), for our experimental\n",
     "evaluation.   "
    ]
   },
@@ -288,11 +286,11 @@
    "source": [
     "Traditional image forensics methods can be classified according\n",
     "to the image features that they target, such as local\n",
-    "noise estimation [23], pattern analysis [10], illumination modeling\n",
-    "[9] and steganalysis feature classification [7]. However,\n",
+    "noise estimation [[23]](#[23]), pattern analysis [[10]](#[10]), illumination modeling\n",
+    "[[9]](#[9]) and steganalysis feature classification [[7]](#[7]). However,\n",
     "with the deep learning breakthrough, the computer vision\n",
     "community has radically steered towards neural networks\n",
-    "techniques. For example, [8], [28] are recent works based\n",
+    "techniques. For example, [[8]](#[8]), [[28]](#[28]) are recent works based\n",
     "on Convolutional Neural Networks (CNN). These CNN-based\n",
     "approaches also aim to capture the aforementioned image\n",
     "features, but in an inexplicit way."
@@ -306,7 +304,7 @@
     "(GAN) which marked a milestone in generative models.\n",
     "In particular, the image generation has been improved\n",
     "significantly, leading to a striking progress on artificial faces\n",
-    "[5] among others. As a consequence, new image and video\n",
+    "[[5]](#[5]) among others. As a consequence, new image and video\n",
     "manipulation techniques known as DeepFake have emerged\n",
     "and established themselves online over the last few months.\n",
     "This occurrence of events on digital image forensics has been\n",
@@ -318,14 +316,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The lack of eye blinking [18] is one drawback observed,\n",
+    "The lack of eye blinking [[18]](#[18]) is one drawback observed,\n",
     "when the videos are artificially created. This is due to the\n",
     "scarcity of training images including photographs with the\n",
     "subject’s eyes closed. Nevertheless, this detection can be\n",
     "circumvented by adding images with closed eyes in training.\n",
-    "Finding unnatural head poses, is also an extend technique [26],\n",
+    "Finding unnatural head poses, is also an extend technique [[26]](#[26]),\n",
     "in order to detect tampered digital contents. On the other hand,\n",
-    "the works [17], [22] analyze the color-space features from\n",
+    "the works [[17]](#[17]), [[22]](#[22]) analyze the color-space features from\n",
     "GAN generated images and real images, and use the disparity\n",
     "to classify them."
    ]
@@ -334,11 +332,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other approaches [2], [21], [27], rather than leveraging\n",
+    "Other approaches [[2]](#[2]), [[21]](#[21]), [[27]](#[27]), rather than leveraging\n",
     "explicit lacks or failures, rely on CNNs to distinguish GAN’s\n",
-    "output from real images. In the same vein, [13] introduces\n",
+    "output from real images. In the same vein, [[13]](#[13]) introduces\n",
     "deep forgery discriminator with a contrastive loss function\n",
-    "and [12] incorporates temporal domain information by\n",
+    "and [[12]](#[12]) incorporates temporal domain information by\n",
     "employing Recurrent Neural Networks (RNNs) upon CNNs.\n",
     "While deep learning methods show promising performance,\n",
     "a key concern is that all these methods can be easily learnt\n",
@@ -556,7 +554,7 @@
    "metadata": {},
    "source": [
     "Support Vector Machines\n",
-    "(SVMs) [3], [6] are among the most widely used learning\n",
+    "(SVMs) [[3]](#[3]), [[6]](#[6]) are among the most widely used learning\n",
     "algorithms for (non-linear) data classification. The target of the\n",
     "SVM formulation is to produce a model (based on the training\n",
     "data) which will identify an optimal separating hyperplane,\n",
@@ -675,8 +673,8 @@
     "a new high-resolution data set, called Faces-HQ, together\n",
     "with its training settings and experiments, and we discuss our\n",
     "results in detail. In order to verify our approach, we also\n",
-    "evaluate on the CelebA data set [19], which contains mediumresolution\n",
-    "images, and on the FaceForensics++ data set [25],\n",
+    "evaluate on the CelebA data set [[19]](#[19]), which contains mediumresolution\n",
+    "images, and on the FaceForensics++ data set [[25]](#[25]),\n",
     "which contains low-resolution video sequences."
    ]
   },
@@ -704,8 +702,8 @@
     "own data set from established sources, called Faces-HQ2. In\n",
     "order to have a sufficient variety of faces, we have chosen to\n",
     "download and label the images available from the CelebA-HQ\n",
-    "data set [14], Flickr-Faces-HQ data set [15], 100K Faces\n",
-    "project [1] and www.thispersondoesnotexist.com. In total, we\n",
+    "data set [[14]](#[14]), Flickr-Faces-HQ data set [[15]](#[15]), 100K Faces\n",
+    "project [[1]](#[1]) and www.thispersondoesnotexist.com. In total, we\n",
     "have collected 40K high quality images, half of them real\n",
     "and the other half fake faces. Table I contains a summary."
    ]
@@ -1806,7 +1804,7 @@
     "applying the transformation, we use only the power spectrum\n",
     "since it already contains enough information for the classifier.\n",
     "A first visualization (see Fig. 5) using t-Distributed Stochastic\n",
-    "Neighbor Embedding [20] (t-SNE) reveals a clear clustering\n",
+    "Neighbor Embedding [[20]](#[20]) (t-SNE) reveals a clear clustering\n",
     "of fake and real samples in this feature space."
    ]
   },
@@ -6089,7 +6087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CelebFaces Attributes (CelebA) data set [19]\n",
+    "CelebFaces Attributes (CelebA) data set [[19]](#[19])\n",
     "consists of 202,599 celebrity face images with 40 variations\n",
     "in facial attributes. The dimensions of the face images\n",
     "are 178x218x3, which can be considered to be a medium\n",
@@ -6110,7 +6108,7 @@
     "In order to train our forgery detection\n",
     "classifier we need both real and fake images. We used the real\n",
     "images from the CelebA data set. On the same set, we then\n",
-    "train a DCGAN [24] to generate realistic but fake images. We\n",
+    "train a DCGAN [[24]](#[24]) to generate realistic but fake images. We\n",
     "split the data set into 162,770 images for training and 39,829\n",
     "for testing, and we crop and resize the initial 178x218x3 size\n",
     "images to 128x128x3. Once the model is trained, we can\n",
@@ -6172,7 +6170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FaceForensics++ [25] is a forensics data set\n",
+    "FaceForensics++ [[25]](#[25]) is a forensics data set\n",
     "consisting of video sequences that have been modified with\n",
     "different automated face manipulation methods. Additionally, it is hosting DeepFakeDetection Data set. In particular, this\n",
     "data set contains 363 original sequences from 28 paid actors\n",
@@ -6503,6 +6501,134 @@
     "is harder to identify since the available frequency spectrum\n",
     "is much smaller. Nevertheless, we are able to identify lowresolution\n",
     "fakes in a popular benchmark with 91% accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## REFERENCES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "###### [1] <a class=\"anchor\" id=\"[1]\"></a>\n",
+    "100,000 faces generated. https://generated.photos/.   \n",
+    "###### [2] <a class=\"anchor\" id=\"[2]\"></a>\n",
+    " D. Afchar, V. Nozick, J. Yamagishi, and I. Echizen. Mesonet: a compact\n",
+    "facial video forgery detection network. In 2018 IEEE International\n",
+    "Workshop on Information Forensics and Security (WIFS), pages 1–7.\n",
+    "IEEE, 2018.   \n",
+    "###### [3] <a class=\"anchor\" id=\"[3]\"></a>\n",
+    " B. E. Boser, I. M. Guyon, and V. N. Vapnik. A training algorithm for\n",
+    "optimal margin classifiers. In Proceedings of the fifth annual workshop\n",
+    "on Computational learning theory, pages 144–152. ACM, 1992.   \n",
+    "###### [4] <a class=\"anchor\" id=\"[4]\"></a>\n",
+    " A. Brock, J. Donahue, and K. Simonyan. Large scale gan training for\n",
+    "high fidelity natural image synthesis. arXiv preprint arXiv:1809.11096,\n",
+    "2018.   \n",
+    "###### [5] <a class=\"anchor\" id=\"[5]\"></a>\n",
+    " M. Brundage, S. Avin, J. Clark, H. Toner, P. Eckersley, B. Garfinkel,\n",
+    "A. Dafoe, P. Scharre, T. Zeitzoff, B. Filar, et al. The malicious use\n",
+    "of artificial intelligence: Forecasting, prevention, and mitigation. arXiv\n",
+    "preprint arXiv:1802.07228, 2018.   \n",
+    "###### [6] <a class=\"anchor\" id=\"[6]\"></a>\n",
+    "C. Cortes and V. Vapnik. Support-vector networks. Machine learning,\n",
+    "20(3):273–297, 1995.   \n",
+    "###### [7] <a class=\"anchor\" id=\"[7]\"></a>\n",
+    " D. Cozzolino, D. Gragnaniello, and L. Verdoliva. Image forgery\n",
+    "localization through the fusion of camera-based, feature-based and pixelbased\n",
+    "techniques. In 2014 IEEE International Conference on Image\n",
+    "Processing (ICIP), pages 5302–5306. IEEE, 2014.   \n",
+    "###### [8] <a class=\"anchor\" id=\"[8]\"></a>\n",
+    " D. Cozzolino and L. Verdoliva. Noiseprint: a cnn-based camera model\n",
+    "fingerprint. IEEE Transactions on Information Forensics and Security,\n",
+    "2019.   \n",
+    "###### [9] <a class=\"anchor\" id=\"[9]\"></a>\n",
+    " T. J. De Carvalho, C. Riess, E. Angelopoulou, H. Pedrini, and\n",
+    "A. de Rezende Rocha. Exposing digital image forgeries by illumination\n",
+    "color classification. IEEE Transactions on Information Forensics and\n",
+    "Security, 8(7):1182–1194, 2013.   \n",
+    "###### [10] <a class=\"anchor\" id=\"[10]\"></a>\n",
+    " P. Ferrara, T. Bianchi, A. De Rosa, and A. Piva. Image forgery\n",
+    "localization via fine-grained analysis of cfa artifacts. IEEE Transactions\n",
+    "on Information Forensics and Security, 7(5):1566–1577, 2012.   \n",
+    "###### [11] <a class=\"anchor\" id=\"[11]\"></a>\n",
+    " I. Goodfellow, J. Pouget-Abadie, M. Mirza, B. Xu, D. Warde-Farley,\n",
+    "S. Ozair, A. Courville, and Y. Bengio. Generative adversarial nets. In\n",
+    "Advances in neural information processing systems, pages 2672–2680,\n",
+    "2014.   \n",
+    "###### [12] <a class=\"anchor\" id=\"[12]\"></a>\n",
+    " D. G¨uera and E. J. Delp. Deepfake video detection using recurrent neural\n",
+    "networks. In 2018 15th IEEE International Conference on Advanced\n",
+    "Video and Signal Based Surveillance (AVSS), pages 1–6. IEEE, 2018.   \n",
+    "###### [13] <a class=\"anchor\" id=\"[13]\"></a>\n",
+    " C.-C. Hsu, C.-Y. Lee, and Y.-X. Zhuang. Learning to detect fake face\n",
+    "images in the wild. In 2018 International Symposium on Computer,\n",
+    "Consumer and Control (IS3C), pages 388–391. IEEE, 2018.   \n",
+    "###### [14] <a class=\"anchor\" id=\"[14]\"></a>\n",
+    " T. Karras, T. Aila, S. Laine, and J. Lehtinen. Progressive growing\n",
+    "of gans for improved quality, stability, and variation. arXiv preprint\n",
+    "arXiv:1710.10196, 2017.   \n",
+    "###### [15] <a class=\"anchor\" id=\"[15]\"></a>\n",
+    " T. Karras, S. Laine, and T. Aila. A style-based generator architecture for\n",
+    "generative adversarial networks. In Proceedings of the IEEE Conference\n",
+    "on Computer Vision and Pattern Recognition, pages 4401–4410, 2019.   \n",
+    "###### [16] <a class=\"anchor\" id=\"[16]\"></a>\n",
+    " D. P. Kingma and M. Welling. Auto-encoding variational bayes. arXiv\n",
+    "preprint arXiv:1312.6114, 2013.   \n",
+    "###### [17] <a class=\"anchor\" id=\"[17]\"></a>\n",
+    " H. Li, B. Li, S. Tan, and J. Huang. Detection of deep network\n",
+    "generated images using disparities in color components. arXiv preprint\n",
+    "arXiv:1808.07276, 2018.   \n",
+    "###### [18] <a class=\"anchor\" id=\"[18]\"></a>\n",
+    " Y. Li, M.-C. Chang, and S. Lyu. In ictu oculi: Exposing ai generated fake\n",
+    "face videos by detecting eye blinking. arXiv preprint arXiv:1806.02877,\n",
+    "2018.   \n",
+    "###### [19] <a class=\"anchor\" id=\"[19]\"></a>\n",
+    " Z. Liu, P. Luo, X. Wang, and X. Tang. Deep learning face attributes\n",
+    "in the wild. In Proceedings of the IEEE international conference on\n",
+    "computer vision, pages 3730–3738, 2015.   \n",
+    "###### [20] <a class=\"anchor\" id=\"[20]\"></a>\n",
+    " L. v. d. Maaten and G. Hinton. Visualizing data using t-sne. Journal of\n",
+    "machine learning research, 9(Nov):2579–2605, 2008.   \n",
+    "###### [21] <a class=\"anchor\" id=\"[21]\"></a>\n",
+    " F. Marra, D. Gragnaniello, D. Cozzolino, and L. Verdoliva. Detection\n",
+    "of gan-generated fake images over social networks. In 2018 IEEE Conference\n",
+    "on Multimedia Information Processing and Retrieval (MIPR),\n",
+    "pages 384–389. IEEE, 2018.   \n",
+    "###### [22] <a class=\"anchor\" id=\"[22]\"></a>\n",
+    " S. McCloskey and M. Albright. Detecting gan-generated imagery using\n",
+    "color cues. arXiv preprint arXiv:1812.08247, 2018.   \n",
+    "###### [23] <a class=\"anchor\" id=\"[23]\"></a>\n",
+    " X. Pan, X. Zhang, and S. Lyu. Exposing image splicing with inconsistent\n",
+    "local noise variances. In 2012 IEEE International Conference on\n",
+    "Computational Photography (ICCP), pages 1–10. IEEE, 2012.   \n",
+    "###### [24] <a class=\"anchor\" id=\"[24]\"></a>\n",
+    " A. Radford, L. Metz, and S. Chintala. Unsupervised representation\n",
+    "learning with deep convolutional generative adversarial networks. arXiv\n",
+    "preprint arXiv:1511.06434, 2015.   \n",
+    "###### [25] <a class=\"anchor\" id=\"[25]\"></a>\n",
+    " A. R¨ossler, D. Cozzolino, L. Verdoliva, C. Riess, J. Thies, and\n",
+    "M. Nießner. FaceForensics++: Learning to detect manipulated facial\n",
+    "images. In International Conference on Computer Vision (ICCV), 2019.   \n",
+    "###### [26] <a class=\"anchor\" id=\"[26]\"></a>\n",
+    " X. Yang, Y. Li, and S. Lyu. Exposing deep fakes using inconsistent\n",
+    "head poses. In ICASSP 2019-2019 IEEE International Conference on\n",
+    "Acoustics, Speech and Signal Processing (ICASSP), pages 8261–8265.\n",
+    "IEEE, 2019.   \n",
+    "###### [27] <a class=\"anchor\" id=\"[27]\"></a>\n",
+    " N. Yu, L. Davis, and M. Fritz. Attributing fake images to gans: Learning\n",
+    "and analyzing gan fingerprints. In International Conference on Computer\n",
+    "Vision (ICCV), October 2019.   \n",
+    "###### [28] <a class=\"anchor\" id=\"[28]\"></a>\n",
+    " P. Zhou, X. Han, V. I. Morariu, and L. S. Davis. Two-stream neural\n",
+    "networks for tampered face detection. In 2017 IEEE Conference on\n",
+    "Computer Vision and Pattern Recognition Workshops (CVPRW), pages\n",
+    "1831–1839. IEEE, 2017."
    ]
   },
   {
