Research journal Logo Embedded video resources

--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"imgs/ap.png\" alt=\"Drawing\" style=\"width: 180px; height: 60px;display:inline-block;\"/>\n",
+    "<img src=\"imgs/arxiv.png\" alt=\"Drawing\" style=\"width: 130px;  display:inline-block;\"/>\n",
+    "<img src=\"imgs/research_gate.png\" alt=\"Drawing\" style=\"width: 130px; display:inline-block;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Unmasking DeepFakes with simple Features"
    ]
   },
@@ -13,13 +22,12 @@
    "source": [
     "Ricard Durall <sup>1</sup><sup>2</sup><sup>3</sup> Margret Keuper <sup>4 </sup> Franz-Josef Pfreundt  <sup>1</sup> Janis Keuper <sup>1</sup> <sup>5</sup>   \n",
     "\n",
-    "|  |    |\n",
-    "|------|------|  \n",
-    "|   1   | Fraunhofer ITWM, Germany |\n",
-    "|   2   | University of Heidelberg, Germany   |\n",
-    "|   3   | Fraunhofer Center Machine Learning, Germany   |\n",
-    "|   4   | Data and Web Science Group, University Mannheim, Germany|\n",
-    "|   5   | Institute for Machine Learning and Analytics, Offenburg University,  Germany|"
+    "\n",
+    "***1. Fraunhofer ITWM, Germany***     \n",
+    "***2. University of Heidelberg, Germany***      \n",
+    "***3. Fraunhofer Center Machine Learning, Germany***      \n",
+    "***4. Data and Web Science Group, University Mannheim, Germany***   \n",
+    "***5. Institute for Machine Learning and Analytics, Offenburg University,  Germany***   "
    ]
   },
   {
@@ -6501,6 +6509,62 @@
     "is harder to identify since the available frequency spectrum\n",
     "is much smaller. Nevertheless, we are able to identify lowresolution\n",
     "fakes in a popular benchmark with 91% accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video Resources from other  Related Works"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/x2g48Q2I2ZQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Youtube\n",
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/x2g48Q2I2ZQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/RoGHVI-w9bE\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/RoGHVI-w9bE\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>')"
    ]
   },
   {
