--- a/Unmasking DeepFakes with simple Features.ipynb
+++ b/Unmasking DeepFakes with simple Features.ipynb
@@ -13,6 +13,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the advancement of computer vision in the field of generating fake faces called DeepFakes, which use deep neural networks comes the need to create algorithms that will detect such phenomena. People created with DeepFakes can be fun but also the abuse of technology is certainly present. In addition to this are deep neural network algorithms that can learn the voice of a particular person. These two approaches can lead to serious consequences and abuses. Some videos can be used for criminal liability or can cause unwanted consequences or damage the reputation of certain people. In addition to the fake news that is hot topic, there are also such technologies, which can cause far-reaching consequences because today people consume a huge amount of text, audio and video data without being able to check their relevance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Unmasking DeepFakes with simple Features"
    ]
   },
@@ -6722,7 +6736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
